# EOLES-Dispatch

./: .env.example  .gitignore  EOLES-Dispatch.py  LICENSE  README.md  README.txt  Scenario_BASELINE.xlsx  Scenario_FORMAT.xlsx  format_inputs.R  format_inputs_EXEC.R  pyproject.toml  renewable_ninja_format.R
.github/workflows/: test.yml
docs/: DATA_COLLECTION.md  MODEL.md
inputs/: README.md
outputs/: README.md
renewable_ninja/: README.md  offshore_CU.csv  onshore_CU.csv  pv.csv  renewable_ninja_format.R
scenarios/: scenario_editor.html
scenarios/baseline/: SOURCES.csv  capa.csv  capa_in.csv  exo_EX.csv  exo_IM.csv  fuel_areaFactor.csv  fuel_timeFactor.csv  links.csv  maxAF.csv  rsv_req.csv  stockMax.csv  str_vOM.csv  thr_specs.csv  yEAF.csv
src/eoles_dispatch/: __init__.py  __main__.py  collect.py  config.py  elexon.py  format_inputs.py  format_outputs.py  run.py  utils.py  viz.py
src/eoles_dispatch/collect/: _main_collect.py  elexon.py  entsoe.py  gap_filling.py  rninja.py
src/eoles_dispatch/datacoll/: elexon.py  entsoe.py  gap_filling.py  main_collect.py  rninja.py
src/eoles_dispatch/inputs/: compute.py  format_inputs.py  scenario.py
src/eoles_dispatch/models/: __init__.py  default.py  static_thermal.py
src/eoles_dispatch/run/: _main_run.py  compute.py  export_diagnostics.py  format_inputs.py  format_outputs.py  scenario.py
src/eoles_dispatch/viz/: __init__.py  _charts_inputs.py  _charts_outputs.py  _loaders.py  _report.py  _theme.py  charts_inputs.py  charts_outputs.py  loaders.py  report.py  theme.py
tests/: conftest.py  test_cli.py  test_collect.py  test_collect_mocked.py  test_config.py  test_export_diagnostics.py  test_format_inputs.py  test_format_outputs.py  test_models.py  test_pipeline.py  test_scenario.py  test_viz.py
time-varying_inputs/: demand.csv  exoPrices.csv  hMaxIn.csv  hMaxOut.csv  hours_months.csv  lake_inflows.csv  nmd.csv  nucMaxAF.csv  nucMaxAF_corr_details.xlsx  offshore.csv  pv.csv  river.csv
